Fix element spacing

--- a/docs/_sass/foodrem.scss
+++ b/docs/_sass/foodrem.scss
@@ -328,6 +328,10 @@ article.post {
     border-color: #ccc;
   }
 
+  pre {
+    margin-top: 0.5rem;
+  }
+
   .command-container {
     display: flex;
     column-gap: 1rem;
